Working on cable list tool - Added connector table and editor

--- a/tools/mdtcablelist/src/mdtClMainWindow.ui
+++ b/tools/mdtcablelist/src/mdtClMainWindow.ui
@@ -80,6 +80,8 @@
     </property>
     <addaction name="actEditVehicleType"/>
     <addaction name="separator"/>
+    <addaction name="actEditConnector"/>
+    <addaction name="separator"/>
     <addaction name="actEditArticle"/>
     <addaction name="separator"/>
     <addaction name="actEditUnit"/>
@@ -138,6 +140,11 @@
   <action name="actEditUnit">
    <property name="text">
     <string>Edit &amp;units</string>
+   </property>
+  </action>
+  <action name="actEditConnector">
+   <property name="text">
+    <string>Edit &amp;connectors</string>
    </property>
   </action>
  </widget>
