--- a/tools/mdtcablelist/src/mdtClUnitConnectionDialog.ui
+++ b/tools/mdtcablelist/src/mdtClUnitConnectionDialog.ui
@@ -246,19 +246,27 @@
       </layout>
      </item>
      <item row="10" column="0">
-      <widget class="QLabel" name="lbUnitConnectorName">
+      <widget class="QLabel" name="lbUnitConnectorNameLabel">
        <property name="text">
         <string>Connector :</string>
-       </property>
-       <property name="buddy">
-        <cstring>leUnitConnectorName</cstring>
        </property>
       </widget>
      </item>
      <item row="10" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QLineEdit" name="leUnitConnectorName"/>
+        <widget class="QPushButton" name="pbSelectUnitConnector">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbUnitConnectorName">
+         <property name="text">
+          <string>&lt;None&gt;</string>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pbCopyConnectorName">
