--- a/tools/mdtcablelist/src/mdtTtTestItemEditor.ui
+++ b/tools/mdtcablelist/src/mdtTtTestItemEditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>425</width>
-    <height>45</height>
+    <width>342</width>
+    <height>62</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,13 +15,23 @@
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0">
+    <widget class="QLabel" name="lbSequenceNumber">
+     <property name="text">
+      <string>Seq. #:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLineEdit" name="fld_SequenceNumber"/>
+   </item>
+   <item row="1" column="0">
     <widget class="QLabel" name="lbExpectedValue">
      <property name="text">
       <string>Expected value:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item row="1" column="1">
     <widget class="QLineEdit" name="fld_ExpectedValue"/>
    </item>
   </layout>
