Working on test tool: database schema changes (Test , TestResult tables)
Names for Test and TestResult was not coherent.
Test* becomes TestModel* and TestResult* becomes Test*

--- a/tools/mdtcablelist/src/mdtTtTestModelEditor.ui
+++ b/tools/mdtcablelist/src/mdtTtTestModelEditor.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mdtTtTestEditor</class>
- <widget class="QWidget" name="mdtTtTestEditor">
+ <class>mdtTtTestModelEditor</class>
+ <widget class="QWidget" name="mdtTtTestModelEditor">
   <property name="geometry">
    <rect>
     <x>0</x>
