--- a/tools/mdtcablelist/src/mdtTtTestModelItemEditor.ui
+++ b/tools/mdtcablelist/src/mdtTtTestModelItemEditor.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mdtTtTestItemEditor</class>
- <widget class="QWidget" name="mdtTtTestItemEditor">
+ <class>mdtTtTestModelItemEditor</class>
+ <widget class="QWidget" name="mdtTtTestModelItemEditor">
   <property name="geometry">
    <rect>
     <x>0</x>
