--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
@@ -255,13 +255,6 @@
      <item row="10" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QPushButton" name="pbSelectUnitConnector">
-         <property name="text">
-          <string>...</string>
-         </property>
-        </widget>
-       </item>
-       <item>
         <widget class="QLabel" name="lbUnitConnectorName">
          <property name="text">
           <string>&lt;None&gt;</string>
@@ -269,9 +262,23 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pbCopyConnectorName">
+        <widget class="QPushButton" name="pbSelectUnitConnector">
          <property name="text">
-          <string>&lt;--</string>
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pbSetNoConnector">
+         <property name="text">
+          <string>None</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbArticleConnectorNameLabel">
+         <property name="text">
+          <string>Article connector:</string>
          </property>
         </widget>
        </item>
@@ -307,9 +314,16 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="lbArticleContactName">
+        <widget class="QLabel" name="lbContactName">
          <property name="text">
           <string>Article contact name</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pbSelectContact">
+         <property name="text">
+          <string>...</string>
          </property>
         </widget>
        </item>
