Working on cable list tool

--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>570</width>
-    <height>579</height>
+    <width>590</width>
+    <height>347</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Unit connection edition</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -333,6 +333,12 @@
    </item>
    <item>
     <widget class="QGroupBox" name="gbRanges">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="title">
       <string>Terminal ranges</string>
      </property>
