--- a/src/mdtdatabase/mdtSqlWindow.ui
+++ b/src/mdtdatabase/mdtSqlWindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>499</width>
-     <height>23</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="mnuMainFile">
@@ -36,7 +36,7 @@
     <string>toolBar</string>
    </property>
    <attribute name="toolBarArea">
-    <enum>BottomToolBarArea</enum>
+    <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
     <bool>false</bool>
