--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitLinkDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitLinkDialog.ui
@@ -166,17 +166,31 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
+            <item row="2" column="0">
              <widget class="QLabel" name="lbStartCabinetLabel">
               <property name="text">
                <string>Cabinet:</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
+            <item row="2" column="1">
              <widget class="QLabel" name="lbStartCabinet">
               <property name="text">
                <string>Cabinet</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="lbStartAliasLabel">
+              <property name="text">
+               <string>Alias:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLabel" name="lbStartAlias">
+              <property name="text">
+               <string>Alias</string>
               </property>
              </widget>
             </item>
@@ -356,17 +370,31 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
+            <item row="2" column="0">
              <widget class="QLabel" name="lbEndCabinetLabel">
               <property name="text">
                <string>Cabinet:</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
+            <item row="2" column="1">
              <widget class="QLabel" name="lbEndCabinet">
               <property name="text">
                <string>Cabinet</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="lbEndAliasLabel">
+              <property name="text">
+               <string>Alias:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLabel" name="lbEndAlias">
+              <property name="text">
+               <string>Alias</string>
               </property>
              </widget>
             </item>
