--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>590</width>
-    <height>347</height>
+    <width>604</width>
+    <height>369</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -61,198 +61,13 @@
       </layout>
      </item>
      <item row="2" column="0">
-      <widget class="QLabel" name="lbFunctionEN">
-       <property name="text">
-        <string>Function ENG :</string>
-       </property>
-       <property name="buddy">
-        <cstring>leFunctionEN</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_3">
-       <item>
-        <widget class="QLineEdit" name="leFunctionEN"/>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pbCopyFunctionEN">
-         <property name="text">
-          <string>&lt;--</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lbArticleFunctionEN">
-         <property name="text">
-          <string>Article function EN</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="lbFunctionFR">
-       <property name="text">
-        <string>Function FRA :</string>
-       </property>
-       <property name="buddy">
-        <cstring>leFunctionFR</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_4">
-       <item>
-        <widget class="QLineEdit" name="leFunctionFR"/>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pbCopyFunctionFR">
-         <property name="text">
-          <string>&lt;--</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lbArticleFunctionFR">
-         <property name="text">
-          <string>Article function FR</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="lbFunctionDE">
-       <property name="text">
-        <string>Function DEU :</string>
-       </property>
-       <property name="buddy">
-        <cstring>leFunctionDE</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_5">
-       <item>
-        <widget class="QLineEdit" name="leFunctionDE"/>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pbCopyFunctionDE">
-         <property name="text">
-          <string>&lt;--</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lbArticleFunctionDE">
-         <property name="text">
-          <string>Article function DE</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="lbFunctionIT">
-       <property name="text">
-        <string>Function ITA :</string>
-       </property>
-       <property name="buddy">
-        <cstring>leFunctionIT</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_6">
-       <item>
-        <widget class="QLineEdit" name="leFunctionIT"/>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pbCopyFunctionIT">
-         <property name="text">
-          <string>&lt;--</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="lbArticleFunctionIT">
-         <property name="text">
-          <string>Article function IT</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="6" column="0">
-      <widget class="QLabel" name="lbSignalName">
-       <property name="text">
-        <string>Signal name :</string>
-       </property>
-       <property name="buddy">
-        <cstring>leSignalName</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_8">
-       <item>
-        <widget class="QLineEdit" name="leSignalName"/>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </item>
-     <item row="8" column="0">
-      <widget class="QLabel" name="lbSwAddress">
-       <property name="text">
-        <string>SW address :</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_9">
-       <item>
-        <widget class="QSpinBox" name="sbSwAddress">
-         <property name="maximum">
-          <number>65000</number>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </item>
-     <item row="10" column="0">
       <widget class="QLabel" name="lbUnitConnectorNameLabel">
        <property name="text">
         <string>Connector :</string>
        </property>
       </widget>
      </item>
-     <item row="10" column="1">
+     <item row="2" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLabel" name="lbUnitConnectorName">
@@ -291,7 +106,28 @@
        </item>
       </layout>
      </item>
-     <item row="11" column="0">
+     <item row="3" column="0">
+      <widget class="QLabel" name="lbConnectionType">
+       <property name="text">
+        <string>Connection type:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_11">
+       <item>
+        <widget class="QComboBox" name="cbConnectionType"/>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbConnectionTypeText">
+         <property name="text">
+          <string>Connection type text</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="4" column="0">
       <widget class="QLabel" name="lbUnitContactName">
        <property name="text">
         <string>Contact :</string>
@@ -301,7 +137,7 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
+     <item row="4" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLineEdit" name="leUnitContactName"/>
@@ -326,6 +162,191 @@
           <string>...</string>
          </property>
         </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="lbFunctionEN">
+       <property name="text">
+        <string>Function ENG :</string>
+       </property>
+       <property name="buddy">
+        <cstring>leFunctionEN</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QLineEdit" name="leFunctionEN"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pbCopyFunctionEN">
+         <property name="text">
+          <string>&lt;--</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbArticleFunctionEN">
+         <property name="text">
+          <string>Article function EN</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="lbFunctionFR">
+       <property name="text">
+        <string>Function FRA :</string>
+       </property>
+       <property name="buddy">
+        <cstring>leFunctionFR</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <item>
+        <widget class="QLineEdit" name="leFunctionFR"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pbCopyFunctionFR">
+         <property name="text">
+          <string>&lt;--</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbArticleFunctionFR">
+         <property name="text">
+          <string>Article function FR</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="lbFunctionDE">
+       <property name="text">
+        <string>Function DEU :</string>
+       </property>
+       <property name="buddy">
+        <cstring>leFunctionDE</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <item>
+        <widget class="QLineEdit" name="leFunctionDE"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pbCopyFunctionDE">
+         <property name="text">
+          <string>&lt;--</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbArticleFunctionDE">
+         <property name="text">
+          <string>Article function DE</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="lbFunctionIT">
+       <property name="text">
+        <string>Function ITA :</string>
+       </property>
+       <property name="buddy">
+        <cstring>leFunctionIT</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_6">
+       <item>
+        <widget class="QLineEdit" name="leFunctionIT"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pbCopyFunctionIT">
+         <property name="text">
+          <string>&lt;--</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="lbArticleFunctionIT">
+         <property name="text">
+          <string>Article function IT</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="9" column="0">
+      <widget class="QLabel" name="lbSignalName">
+       <property name="text">
+        <string>Signal name :</string>
+       </property>
+       <property name="buddy">
+        <cstring>leSignalName</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_8">
+       <item>
+        <widget class="QLineEdit" name="leSignalName"/>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item row="10" column="0">
+      <widget class="QLabel" name="lbSwAddress">
+       <property name="text">
+        <string>SW address :</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_9">
+       <item>
+        <widget class="QSpinBox" name="sbSwAddress">
+         <property name="maximum">
+          <number>65000</number>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </item>
